@@ -65,7 +65,6 @@ public class PmsConfiguration {
 	private static final String KEY_MAX_AUDIO_BUFFER = "maxaudiobuffer";
 	private static final String KEY_MAX_BITRATE = "maximumbitrate";
 	private static final String KEY_MAX_MEMORY_BUFFER_SIZE = "maxvideobuffer";
-	private static final String KEY_MENCODER_AC3_FIXED = "mencoder_ac3_fixed";
 	private static final String KEY_MENCODER_ASS_DEFAULTSTYLE = "mencoder_ass_defaultstyle";
 	private static final String KEY_MENCODER_ASS_MARGIN = "mencoder_ass_margin";
 	private static final String KEY_MENCODER_ASS = "mencoder_ass";
@@ -488,11 +487,6 @@ public class PmsConfiguration {
 		return getString(KEY_MENCODER_ASS_SCALE, "1.0");
 	}
 
-	// http://www.ps3mediaserver.org/forum/viewtopic.php?f=7&t=10809&p=51325#p51325
-	public boolean isMencoderAc3Fixed() {
-		return configuration.getBoolean(KEY_MENCODER_AC3_FIXED, Platform.isMac());
-	}
-	
 	public String getMencoderAssMargin() {
 		return getString(KEY_MENCODER_ASS_MARGIN, "10");
 	}
@@ -523,11 +517,6 @@ public class PmsConfiguration {
 
 	public void setMencoderNoAssOutline(String value) {
 		configuration.setProperty(KEY_MENCODER_NOASS_OUTLINE, value);
-	}
-
-	// FIXME currently unused
-	public void setMencoderAc3Fixed(boolean value) {
-		configuration.setProperty(KEY_MENCODER_AC3_FIXED, value);
 	}
 
 	public void setMencoderAssMargin(String value) {
